--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,11 +12,6 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
 
 thead {color:green;}
 tbody {color:blue;}
@@ -46,7 +30,7 @@ td, th{
   margin-bottom: 510px;
   padding-left: 80px;
 }
-.px-2 {
+.p-2 {
   padding-left: 30px;
   padding-right: 30px;
   padding-bottom: 30px;
